# s3check

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yml  ci.yml
examples/: README.md  aws-config.json  minio-config.json
src/s3check/: __init__.py  cli.py  client.py  config.py  providers.py  ui.py
tests/: __init__.py  test_config.py  test_providers.py  test_ui.py
